--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "s3-interpreter"
+name = "s3interpreter"
 version = "0.0.1"
 authors = [
     { name="Zhvan" },
